<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Star-Net Security</string>
    <string name="app_name2">Star-Net Security-v5.10.0</string>
    <string name="app_name3">Device List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="IDS_ConnectTimeoutInterval">20000</string>
    
    <string name="IDS_OVERRIDE">Override</string>
    <string name="IDS_DELETE">Delete</string>
    <string name="IDS_ABOUTBOX">About EPhonePlayer...</string>
    <string name="IDS_LoginInfo">Login failed,Please make sure the username and password are correct</string>
    <string name="IDS_Connect">Connect</string>
    <string name="IDS_Settings">Setting</string>
    <string name="IDS_Channel">Channel</string>
    <string name="IDS_Left">Left</string>
    <string name="IDS_Right">Right</string>
    <string name="IDS_Up">Up</string>
    <string name="IDS_Down">Down</string>
    <string name="IDS_ZoomOut">ZoomOut</string>
    <string name="IDS_ZoomIn">ZoomIn</string>
    <string name="IDS_OpticalOut">Add_Aperture</string>
    <string name="IDS_OpticalIn">Sub_Aperture</string>
    <string name="IDS_FocusOut">Add_Focus</string>
    <string name="IDS_FocusIn">Sub_Focus</string>
    <string name="IDS_Photo">Take_Photo</string>
    <string name="IDS_Select_ACQ">Not select collection source</string>
    <string name="DS_AddFavSuc">Add favorite successful</string>
    <string name="IDS_AddFavFail">Add favorite failed</string>
    <string name="IDS_DownFavCon">Begin download favorite content...</string>
    <string name="IDS_EndDownFav">Complete downloading favorite content</string>
    <string name="IDS_OffCurConnect">Quench current connection...</string>
    <string name="IDS_StConnectServer">Begin connect server...</string>
    <string name="IDS_UpdateList">Update current list...</string>
    <string name="IDS_DelFavSuc">Delete favorite successful</string>
    <string name="IDS_DelFavFail">Delete favorite failed</string>
    <string name="IDS_ConnectServer">Connect server...</string>
    <string name="IDS_LoginServer">Log in server...</string>
    <string name="IDS_LoginSerFail">Login server failed</string>
    <string name="IDS_LoginSerSuccess">Login server success</string>
    <string name="IDS_buffer">Buffering%d%%</string>
    <string name="IDS_Playing">Playing</string>
    <string name="IDS_Stop">Stop</string>
    <string name="DS_ConSerSuc">Connect server successful</string>
    <string name="IDS_ConSerFail">Connect server failed</string>
    <string name="IDS_InternetOff">Internet off</string>
    <string name="IDS_ChangeChannel">Changing Channel...</string>
    <string name="IDS_ACQ_Off">Connection source off</string>
    <string name="IDS_UserInfoErr">Username or password error</string>
    <string name="IDS_Downloading">Begin downloading...</string>
    <string name="IDS_Pause">Stop</string>
    <string name="IDS_Unknown">IDS_Unknown</string>
    <string name="IDS_Opening">Opening</string>
    <string name="IDS_OpenFileFail">Open file failed</string>
    <string name="IDS_BeginReqData">Requesting data...</string>
    <string name="IDS_OpenPsDataFail">Open historcal data failed</string>
    <string name="IDS_VersionErr">Verion Error</string>
    <string name="IDS_UserMax">Too many users</string>
    <string name="IDS_SerResSuc">Server response successful</string>
    <string name="IDS_InfoErr">Information Error</string>
    <string name="IDS_Err">Error</string>
    <string name="IDS_ValidateFail">Validate Failed!</string>
    <string name="IDS_ValidateSuc">Validate Successful</string>
    <string name="IDS_Out">Exit or not?</string>
    <string name="IDS_Sure">Ensure</string>
    <string name="IDS_ReLoginInfo">Username or password is wrong, please login in again!</string>
    <string name="IDS_DupRecord">The same record has been saved already, Cover it or delete?</string>
    <string name="IDS_RecordSaveSuc">The record has been saved successfully!</string>
    <string name="IDS_DelSuc">The record has been deleted successfully!</string>
    <string name="IDS_DelFail">The record has been deleted fail!</string>
    <string name="IDS_HstRecord">Favorite</string>
    <string name="IDS_UserName">UserName</string>
    <string name="IDS_Password">Password</string>
    <string name="IDS_Server">Server</string>
    <string name="IDS_Port">Port</string>
    <string name="IDS_ChannelNum">ChannelCount</string>
    <string name="IDS_DefaultChannel">DefaultChannel</string>
    <string name="IDS_RecordName">RecordName</string>
    <string name="IDS_Version">Version:20100121</string>
    <string name="IDS_Btn_Save">Save/Delete</string>
    <string name="IDS_Btn_OK">Yes</string>
    <string name="IDS_Btn_Quit">Back</string>
    <string name="IDS_Time_Out">Connection has timed out...Please check the network!</string>
    <string name="IDS_CLOSE_CONNECT">Close connection ....</string>
    <string name="IDS_FULLSCREEN">FullScreen</string>
    <string name="IDS_NOSDCARD">Has no sdcard</string>
    <string name="IDS_Continue">Continue</string>
    <string name="IDS_Dispos">Dispos</string>
    <string name="IDS_Saveimg">Save the image to/SDCard/ImageSave/</string>
    <string name="IDS_Error_Sdcard">Can not find SD card or unwriteable</string>
    <string name="IDS_FILE">File sucessfuly!</string>
    <string name="IDS_CreateFolderFailure">Create /SDCard/ImageSave/ failure</string>
    <string name="IDS_Ready">Ready</string>
    <string name="IDS_Connect_dispos">Connection has been disconnected</string>
    <string name="IDS_Error_UserName">User name can not exceed 32 characters</string>
    <string name="IDS_Error_PassWorld">Password can not exceed 16 characters</string>
    <string name="IDS_Error_Server">Server address can not be empty</string>
    <string name="IDS_Error_Port">Port value is between 100-65535</string>
    <string name="IDS_Error_RecordNameNull">Record name can not be empty</string>
    <string name="IDS_Error_Length">Name length can not exceed 32 characters</string>
    <string name="IDS_Select_one">Please select a record</string>
    <string name="IDS_Icon_Text">SAGE android</string>
    <string name="IDS_CHECK_OK">ID verification success</string>
    <string name="IDS_CHECK_FAIL">ID verification fail</string>
    <string name="IDS_CHECK">Verify ID</string>
    <string name="IDS_CHECK_INDEFINE">Verifying identification number, please wait patiently</string>
    <string name="IDS_NET_ERROR">Abnormal network connection, please try again</string>
    <string name="IDS_VERSION">Version Info</string>
    <string name="IDS_CONNECT_READY">Connected</string>
    <string name="IDS_INFO_HELP">There is a connect are you sure to close and reconnect</string>
    <string name="IDS_SAVE_RECORD">Save success</string>
    <string name="IDS_DELETE_RECORD">Delete success</string>
    <string name="IDS_DATA_ERROR">Data Error</string>
    <string name="IDS_UNSUPPORTEDPROFILE_MAIN">Unsupported profile type(Main Profile)</string>
    <string name="IDS_UNSUPPORTEDPROFILE_EXTENDED">Unsupported profile type(Extended Profile)</string>
    <string name="IDS_UNSUPPORTEDPROFILE_HIGH">Unsupported profile type(High Profile)</string>
    <string name="IDS_UNSUPPORTEDPROFILE_UNKNOWN">Unsupported profile type</string>
    <string name="ddns_setting">Network Setting</string>
    <string name="ddns_server">DDNS Server</string>
    <string name="ddns_port">Port</string>
    <string name="user_id">User ID</string>
    <string name="ddns_passworld">Password</string>
    <string name="ddns_request">Request List</string>
    <string name="ddns_back">Back</string>
    <string name="ddns_devicename">Device Name</string>
    <string name="ddns_progress_text">Download device list,please wait...</string>
    <string name="ddns_getlist_fail">Get Device Info fail</string>
    <string name="do_not_support">width height changed,do not supported</string>
    <string name="DEVICE_LIST_ErrorReason">Connect failed，please check the domain and port</string>
    <string name="DEVICE_SINGLE_ErrorReason">Get Device fail</string>
    <string name="DEVICE_LIST_REQ_TIMEOUT">Request timeout, please check network status</string>
    <string name="IDS_PROMPT_DEVICENAMEINPUT">Please input device name</string>
    <string name="IDS_PROMPT_NULLSETTING">Please do the ddns setting first !</string>
    
    
</resources>