<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbarSize="0.0px" android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_alignParentLeft="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ddns_server" android:layout_alignParentLeft="true" />
                <EditText android:id="@+id/ddns_server" android:layout_width="300.0dip" android:layout_height="40.0dip" android:hint="@string/ddns_server" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ddns_port" />
                <EditText android:id="@+id/ddns_port" android:layout_width="300.0dip" android:layout_height="40.0dip" android:hint="@string/ddns_port" android:phoneNumber="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_id" />
                <EditText android:id="@+id/ddns_userid" android:layout_width="300.0dip" android:layout_height="40.0dip" android:hint="@string/user_id" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ddns_passworld" />
                <EditText android:id="@+id/ddns_password" android:layout_width="300.0dip" android:layout_height="40.0dip" android:password="true"  android:hint="@string/ddns_passworld" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ddns_devicename" />
                <EditText android:id="@+id/ddns_devicename" android:layout_width="300.0dip" android:layout_height="40.0dip" android:hint="@string/ddns_devicename" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>